Included Swagger, middleware authetication and providers for tokens

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:root@localhost:5432/postgres?schema=public"
+TOKEN_TIME="20s"
+REFRESH_TOKEN_TIME="20"
+REFRESH_TOKEN_UNIT="second"
+TOKEN_PASS="c6e1cd65-45df-4b9f-8232-6817895946b1"
