--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
@@ -13,14 +13,22 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/swagger-ui-express": "^4.1.3",
+    "dotenv": "^16.0.0",
+    "jest": "^27.5.1",
     "prisma": "^3.12.0",
+    "supertest": "^6.2.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.0",
     "express": "^4.17.3",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
