--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "babel-jest": "^27.5.1",
     "dotenv": "^16.0.0",
     "jest": "^27.5.1",
     "prisma": "^3.12.0",
